cncProd/force-app/main/default/objects/Vehicle_Credit__c/Vehicle_Credit__c.object-meta.xml
<CustomObject>
    <description>Used to capture Vehicle Credit data (i.e. Service / Accessories ) from DWH</description>
    <label>Vehicle Credit</label>
    <nameField>
        <displayFormat>VCR-{0000000}</displayFormat>
        <label>Vehicle Credit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles Credit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>