cncProd/force-app/main/default/objects/Vehicle_Credit__c/fields/Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Number__c</fullName>
    <description>Chassis number</description>
    <label>Chassis Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>