cncProd/force-app/main/default/objects/Vehicle_Credit__c/fields/Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Balance__c</fullName>
    <label>Credit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>