cncProd/force-app/main/default/objects/Vehicle_Credit__c/fields/DSS_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>DSS_Update_Time__c</fullName>
    <label>DSS Update Time</label>
    <type>DateTime</type>
</CustomField>