cncProd/force-app/main/default/objects/Vehicle_Credit__c/fields/Edited_Date__c.field-meta.xml
<CustomField>
    <fullName>Edited_Date__c</fullName>
    <label>Edited Date</label>
    <type>Date</type>
</CustomField>