cncProd/force-app/main/default/objects/Vehicle_Credit__c/fields/Magic_Customer__c.field-meta.xml
<CustomField>
    <fullName>Magic_Customer__c</fullName>
    <label>Magic (Customer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>