cncProd/force-app/main/default/objects/Vehicle_Credit__c/fields/Stop_Flag__c.field-meta.xml
<CustomField>
    <fullName>Stop_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Flag</label>
    <type>Checkbox</type>
</CustomField>