cncProd/force-app/main/default/objects/Vehicle_Credit__c/recordTypes/Accessories_Credit.recordType-meta.xml
<RecordType>
    <fullName>Accessories_Credit</fullName>
    <active>true</active>
    <description>Accessories Credit</description>
    <label>Accessories Credit</label>
</RecordType>