cncProd/force-app/main/default/objects/Vehicle_Credit__c/recordTypes/Service_Credit.recordType-meta.xml
<RecordType>
    <fullName>Service_Credit</fullName>
    <active>true</active>
    <label>Service Credit</label>
</RecordType>