cncProd/force-app/main/default/objects/Vehicle_Credit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DWH_Vehicle_ID__c</columns>
    <columns>Chassis_Number__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Credit_Balance__c</columns>
    <columns>Data_Source__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Magic_Customer__c</columns>
    <columns>Module_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Stop_Flag__c</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Unique_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>